feat: dashboard with metrics, workflow to update for live data

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preload" href="assets/i18n/en.json" as="fetch" crossorigin="anonymous" />
   </head>
+
   <body>
     <eb-root></eb-root>
   </body>
