perf(lighthouse): improve lh scores

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <title>Angular Enterprise Blueprint</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Angular Enterprise Blueprint - A scalable, production-ready Angular architecture reference."
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" href="assets/i18n/en.json" as="fetch" crossorigin="anonymous" />
     <!-- Content Security Policy -->
