feat(blog): add skeleton to blog details

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" href="assets/i18n/en.json" as="fetch" crossorigin="anonymous" />
+    <link rel="preload" href="assets/data/blog-articles.json" as="fetch" crossorigin="anonymous" />
     <!-- Content Security Policy -->
     <meta
       http-equiv="Content-Security-Policy"
