--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" href="assets/i18n/en.json" as="fetch" crossorigin="anonymous" />
     <link rel="preload" href="assets/data/metrics.json" as="fetch" crossorigin="anonymous" />
+
+    <!-- Resource hints for external origins -->
+    <link rel="preconnect" href="https://api.github.com" crossorigin />
+    <link rel="dns-prefetch" href="https://api.github.com" />
+    <link rel="dns-prefetch" href="https://formspree.io" />
+
     <!-- Content Security Policy -->
     <meta
       http-equiv="Content-Security-Policy"
