perf(angular): optimize angular config

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,6 @@
       content="Angular Enterprise Blueprint - A scalable, production-ready Angular architecture reference."
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link
-      rel="preload"
-      href="assets/i18n/en.json"
-      as="fetch"
-      crossorigin="anonymous"
-      fetchpriority="high"
-    />
 
     <!-- Content Security Policy -->
     <meta
@@ -62,12 +55,11 @@
           align-items: center;
           justify-content: center;
           min-height: 100vh;
-          font-family:
-            system-ui,
+          font:
+            1.125rem system-ui,
             -apple-system,
             sans-serif;
-          font-size: 1.125rem;
-          color: var(--color-text-secondary, #64748b);
+          color: #64748b;
         }
         @media (prefers-color-scheme: dark) {
           .app-loading {
